# apiark

./: CLAUDE.md  LAUNCH_CHECKLIST.md  README.md  package.json  pnpm-lock.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main-window.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: ai.rs  audit.rs  backup.rs  collection.rs  grpc.rs  http.rs  import_export.rs  license.rs  mod.rs  oauth.rs  runner.rs  socketio.rs  terminal.rs  window.rs
apps/desktop/src-tauri/src/exporter/: apiark.rs  bruno.rs  insomnia.rs  mod.rs  postman.rs
apps/desktop/src-tauri/src/grpc/: client.rs  mod.rs
apps/desktop/src-tauri/src/http/: auth_handlers.rs  client.rs  cookies.rs  error_classifier.rs  interpolation.rs  mod.rs  request_builder.rs  response_parser.rs
apps/desktop/src-tauri/src/importer/: bruno.rs  har.rs  hoppscotch.rs  insomnia.rs  mod.rs  openapi.rs  postman.rs  writer.rs
apps/desktop/src-tauri/src/mock/: server.rs
apps/desktop/src-tauri/src/models/: auth.rs  collection.rs  error.rs  mod.rs  request.rs  response.rs
apps/desktop/src-tauri/src/oauth/: callback.rs  flow.rs  mod.rs
apps/desktop/src-tauri/src/plugins/: manager.rs  mod.rs
apps/desktop/src-tauri/src/runner/: collection_runner.rs
apps/desktop/src-tauri/src/storage/: audit.rs  collection.rs  history.rs  mod.rs  settings.rs
apps/desktop/src-tauri/src/watcher/: collection_watcher.rs
docs/: ci-integration.md  gdpr-compliance.md  privacy-policy.md  schema.md  terms-of-service.md
(+106 files in other folders)
