[package]
name = "apiark"
version = "0.1.0"
description = "Local-first API development platform"
authors = ["ApiArk Contributors"]
edition = "2021"

[lib]
name = "apiark_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "apiark"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls", "multipart"] }
url = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
